Fix mobile background and horizontal scroll

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -1,6 +1,7 @@
  body{
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
     }
 
     html {
@@ -317,6 +318,7 @@ p{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-color: #090909;
+    background-attachment: scroll;
   }
 
   * {
